<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:context=".Settings"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/design_default_color_primary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:title="                   Settings"
            android:elevation="4dp"/>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:src="@drawable/professionalteam"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_bar" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="420dp"
                android:gravity="center"
                android:text="Profession makes your future!"
                android:textSize="22dp"
                android:textStyle="bold"/>


            <Button
                android:id="@+id/btn_ViewDeveloper"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="500dp"
                android:layout_marginLeft="15dp"
                android:backgroundTint="@color/Button"
                android:onClick="ViewDeveloper"
                android:text="View Developer Information"
                android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_Home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/btn_Home"
        android:textColor="@color/Button"
        android:layout_marginTop="550dp"
        android:layout_marginLeft="0dp" />

    <Button
        android:id="@+id/btn_Payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/btn_Payment"
        android:textColor="@color/Button"
        android:layout_marginTop="550dp"
        android:layout_marginLeft="100dp" />

    <Button
        android:id="@+id/btn_Tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/btn_Tax"
        android:textColor="@color/Button"
        android:layout_marginTop="550dp"
        android:layout_marginLeft="210dp" />

    <Button
        android:id="@+id/btn_Settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/btn_Settings"
        android:textColor="@color/Button"
        android:layout_marginTop="550dp"
        android:layout_marginLeft="320dp"/>




        </FrameLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu"/>


</androidx.drawerlayout.widget.DrawerLayout>